8238663: [nestmates] array type of hidden class returns incorrect name

If the array type bottom class is hidden then change the last '+' in its name to '/'

Reviewed-by: hseigel